@@ -1,3 +1,9 @@
+2010-02-07 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCmain.c, src/SDCCglobl.h, src/z80/main.c, src/hc08/main.c,
+	  sdas/linksrc/lkmain.c, sdas/linksrc/lkar.c, sdas/linksrc/lkrloc.c:
+	  fixed output file format handling
+
 2010-02-06 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/_setjmp.c: fixed --stack-auto for model-huge
@@ -14,8 +20,8 @@
 
 	* src/mcs51/main.c, src/z80/main.c, src/ds390/main.c, src/hc08/main.c,
 	  src/xa51/main.c, src/SDCCmain.c, src/port.h:
-	  list of C runtime initialization object files crt0.c moved to port
-	  structure, defined for each target targets
+	  list of C runtime initialization object files crt0.rel moved to port
+	  structure, defined for each target
 
 2010-02-02 Philipp Klaus Krause <pkk AT spth.de>
 
